--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@jigsaw/html2sb-compiler": "^1.0.5",
     "jsdom": "^13.1.0",
     "moment": "^2.23.0",
-    "puppeteer": "^1.11.0"
+    "puppeteer": "^1.11.0",
+    "xml-js": "^1.6.8"
   }
 }
